[gd_scene load_steps=5 format=3 uid="uid://dakmfuhim8ksf"]

[ext_resource type="Script" uid="uid://dn4j7vh85cnpd" path="res://scripts/utils/main_menu.gd" id="1_iaex4"]
[ext_resource type="Texture2D" uid="uid://cli0qdu5xqr7u" path="res://assets/ui/background.png" id="2_dlq2s"]
[ext_resource type="FontFile" uid="uid://dg24wywv57r80" path="res://assets/fonts/BoldPixels.ttf" id="2_ompks"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pmxjk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iaex4")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dlq2s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.0
offset_right = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.2899073, 0.24211943, 0.14439067, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_ompks")
theme_override_font_sizes/font_size = 201
text = "ENVELHOPE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("2_ompks")
theme_override_font_sizes/font_size = 81
theme_override_styles/pressed = SubResource("StyleBoxTexture_pmxjk")
text = "  Continue  "

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("2_ompks")
theme_override_font_sizes/font_size = 81
theme_override_styles/pressed = SubResource("StyleBoxTexture_pmxjk")
text = "  New Game  "

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("2_ompks")
theme_override_font_sizes/font_size = 81
theme_override_styles/pressed = SubResource("StyleBoxTexture_pmxjk")
text = "  Settings  "

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("2_ompks")
theme_override_font_sizes/font_size = 81
text = "  Quit Game  "

[node name="SettingsContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Panel" type="Panel" parent="SettingsContainer"]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 231.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 130
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsContainer/Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "No Sound "

[node name="CheckButton" type="CheckButton" parent="SettingsContainer/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -363.0
offset_top = -51.0
offset_right = -319.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(5, 5)
focus_mode = 0

[node name="CloseButton" type="Button" parent="SettingsContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -200.0
offset_right = 82.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 80
text = "  Close  "
alignment = 0

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="SettingsContainer/Panel/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="SettingsContainer/Panel/CloseButton" to="." method="_on_close_button_pressed"]
